[tool.poetry]
name = "cluesolver"
version = "0.1.0"
description = ""
authors = ["Nathan Dileas <ndileas@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
python-constraint = "^1.4.0"
pandas = "^1.3.2"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
